<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <ImageView
            android:id="@+id/top_background_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/profil_image_view"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_alignTop="@+id/top_background_image_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="171dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/nama_profil_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="52dp"
            android:gravity="center_horizontal"
            android:text="@string/nama"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nomor_induk_profil_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="325dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/nip"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/jabatan_profil_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="370dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:text="@string/mahasiswa"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:weightSum="1">

    </LinearLayout>

    <Button
        android:id="@+id/scan_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button2"
        android:text="Scan QR"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/data_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button2"
        android:text="Data Pelanggaran"
        android:textColor="@color/text" />

</LinearLayout>